--- a/WeatherAppTest3/app/src/main/res/layout/fragment_day_forcast.xml
+++ b/WeatherAppTest3/app/src/main/res/layout/fragment_day_forcast.xml
@@ -3,13 +3,39 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="80dp">
-    <ListView
-        android:id="@+id/daily_weather"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="10dp"
->
 
-    </ListView>
-
+    <FrameLayout
+        android:layout_width="wrap_content"
+        android:layout_height="200dp">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:orientation="vertical"
+            android:layout_gravity="center">
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                android:background="#075679"/>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                android:background="#3738b2ea"
+                android:layout_weight="1"/>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                android:background="#075679"/>
+        </LinearLayout>
+        <ListView
+            android:id="@+id/daily_weather"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="10dp"/>
+    </FrameLayout>
 </LinearLayout>
