--- a/WeatherAppTest3/app/src/main/res/layout/fragment_day_forcast.xml
+++ b/WeatherAppTest3/app/src/main/res/layout/fragment_day_forcast.xml
@@ -3,10 +3,79 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="80dp">
+    <ImageView
+        android:id="@+id/weatherIconBox"
+        android:layout_margin="20dp"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:src = "@drawable/ic_clear_sky"
+        android:layout_gravity="center"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="25dp"
+        android:weightSum="8"
+        android:orientation="horizontal"
+        android:layout_marginBottom="30dp">
+        <ImageView
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:src="@drawable/humidity_new"/>
+        <TextView
+            android:id="@+id/humidityBox"
+            android:text="--"
+            android:textSize="15sp"
+            android:textColor="#ffffff"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="match_parent" />
 
+        <ImageView
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:src="@drawable/wind_speed"/>
+        <TextView
+            android:id="@+id/windSpeedBox"
+            android:text="--"
+            android:textSize="15sp"
+            android:textColor="#ffffff"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="match_parent" />
+
+        <ImageView
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:src="@drawable/pressure_icon2"/>
+        <TextView
+            android:id="@+id/pressureBox"
+            android:text="----"
+            android:textSize="15sp"
+            android:textColor="#ffffff"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"/>
+
+        <ImageView
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:src="@drawable/wind_speed"/>
+        <TextView
+            android:id="@+id/pishBox"
+            android:text="--"
+            android:textSize="15sp"
+            android:textColor="#ffffff"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="match_parent" />
+    </LinearLayout>
     <FrameLayout
         android:layout_width="wrap_content"
-        android:layout_height="200dp">
+        android:layout_height="250dp"
+        android:layout_gravity="bottom">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="60dp"
@@ -17,25 +86,28 @@
                 android:layout_height="2dp"
                 android:layout_marginLeft="15dp"
                 android:layout_marginRight="15dp"
-                android:background="#075679"/>
+                android:background="#64b0d9ec"/>
             <View
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_marginLeft="15dp"
                 android:layout_marginRight="15dp"
-                android:background="#3738b2ea"
+                android:background="#47a4d8ef"
                 android:layout_weight="1"/>
             <View
                 android:layout_width="match_parent"
                 android:layout_height="2dp"
                 android:layout_marginLeft="15dp"
                 android:layout_marginRight="15dp"
-                android:background="#075679"/>
+                android:background="#64b0d9ec"/>
         </LinearLayout>
         <ListView
             android:id="@+id/daily_weather"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:padding="10dp"/>
+            android:gravity="bottom"
+            android:padding="10dp"
+            android:background="#3d000000"/>
     </FrameLayout>
+
 </LinearLayout>
