--- a/WeatherAppTest3/app/src/main/res/layout/fragment_locations.xml
+++ b/WeatherAppTest3/app/src/main/res/layout/fragment_locations.xml
@@ -7,7 +7,7 @@
     <ListView
         android:id="@+id/citiesList"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:padding="7dp"
         android:divider="@android:color/transparent"
         android:dividerHeight="5sp">
