--- a/WeatherAppTest3/app/src/main/res/layout/fragment_main_window.xml
+++ b/WeatherAppTest3/app/src/main/res/layout/fragment_main_window.xml
@@ -28,15 +28,34 @@
             android:textColor="#f5f5f5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
-
-        <TextView
-            android:id="@+id/temperatureBox"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textStyle="bold"
-            android:textColor="#f5f5f5"
-            android:text="_"
-            android:textSize="200px"/>
+            android:orientation="horizontal"
+            android:weightSum="2">
+            <TextView
+                android:id="@+id/temperatureBox"
+                android:layout_weight="1"
+                android:gravity="center_horizontal"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:textStyle="bold"
+                android:textColor="#f5f5f5"
+                android:text="_"
+                android:textSize="200px"/>
+            <TextView
+                android:id="@+id/apparentTemperatureBox"
+                android:layout_weight="1"
+                android:gravity="center_horizontal"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:textStyle="bold"
+                android:textColor="#f5f5f5"
+                android:text="__"
+                android:textSize="200px"/>
+        </LinearLayout>
+
+
     </LinearLayout>
 
 
