--- a/WeatherAppTest3/app/src/main/res/layout/toolbar.xml
+++ b/WeatherAppTest3/app/src/main/res/layout/toolbar.xml
@@ -8,9 +8,19 @@
     app:contentInsetStart="0dp"
     android:layout_height="wrap_content"
     android:background="#1a75ae">
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="pish"/>
+        android:orientation="vertical">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="pish"/>
+        <TextView
+            android:id="@+id/pop"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="pish 2"/>
+    </LinearLayout>
 
 </android.support.v7.widget.Toolbar>
