--- a/WeatherAppTest3/app/src/main/res/layout/item_weekly_forecast.xml
+++ b/WeatherAppTest3/app/src/main/res/layout/item_weekly_forecast.xml
@@ -2,25 +2,57 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:weightSum="3">
     <LinearLayout
         android:id="@+id/pip"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:orientation="vertical"
+        android:layout_weight="1"
         android:weightSum="2">
         <TextView
             android:id="@+id/day_name_weekly_forecast"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
+            android:textSize="18sp"
+            android:gravity="start|bottom"
             android:layout_weight="1"
             android:text="day"/>
         <TextView
             android:id="@+id/weather_name_weekly_forecast"
             android:layout_height="0dp"
+            android:textSize="14sp"
+            android:gravity="start|top"
             android:layout_width="wrap_content"
             android:layout_weight="1"
             android:text="weather name"/>
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="1"/>
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:weightSum="2">
+        <TextView
+            android:id="@+id/max_temp_weekly_forecast"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="0"
+            android:layout_weight="1"
+            android:gravity="center_vertical|start"
+            android:textSize="20sp" />
+        <TextView
+            android:id="@+id/min_temp_weekly_forecast"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="0"
+            android:layout_weight="1"
+            android:gravity="center_vertical|end"
+            android:textSize="20sp"/>
+    </LinearLayout>
 </LinearLayout>
