Improved logic for Weekly Forecast

--- a/WeatherAppTest3/app/src/main/res/layout/activity_main.xml
+++ b/WeatherAppTest3/app/src/main/res/layout/activity_main.xml
@@ -64,6 +64,7 @@
             android:src="@drawable/circle2_deactive"/>
         <ImageView
             android:id="@+id/fourth_tab"
+            android:layout_margin="5dp"
             android:layout_width="10dp"
             android:layout_height="10dp"
             android:src="@drawable/circle2_deactive"/>
