--- a/WeatherAppTest3/app/src/main/res/layout/fragment_main_window.xml
+++ b/WeatherAppTest3/app/src/main/res/layout/fragment_main_window.xml
@@ -5,7 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-
     tools:context="nikitin.weatherapp.com.weatherapptest3.MainActivity">
 
     <LinearLayout
@@ -31,39 +30,25 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:weightSum="2">
+            android:orientation="horizontal">
             <TextView
                 android:id="@+id/temperatureBox"
-                android:layout_weight="1"
                 android:gravity="center_horizontal"
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textStyle="bold"
                 android:textColor="#f5f5f5"
+                android:clickable="true"
                 android:text="_"
-                android:textSize="200px"/>
-            <TextView
-                android:id="@+id/apparentTemperatureBox"
-                android:layout_weight="1"
-                android:gravity="center_horizontal"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:textStyle="bold"
-                android:textColor="#f5f5f5"
-                android:text="__"
                 android:textSize="200px"/>
         </LinearLayout>
 
 
     </LinearLayout>
-
-
        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
-
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
