--- a/WeatherAppTest3/app/src/main/res/layout/fragment_weekly_forecast.xml
+++ b/WeatherAppTest3/app/src/main/res/layout/fragment_weekly_forecast.xml
@@ -6,5 +6,11 @@
     <ListView
         android:id="@+id/weekly_forecast"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:dividerHeight="1dp"
+        android:divider="#f0f0f0"
+        android:layout_height="match_parent"
+        android:clipToPadding="false"
+        android:scrollbarStyle="outsideInset"
+        android:overScrollFooter="@android:color/transparent"
+        android:footerDividersEnabled="false"/>
 </LinearLayout>
