--- a/WeatherAppTest3/app/src/main/res/layout/item_weekly_forecast.xml
+++ b/WeatherAppTest3/app/src/main/res/layout/item_weekly_forecast.xml
@@ -2,19 +2,19 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:padding="5dp"
     android:paddingStart="15dp"
     android:paddingLeft="15dp"
     android:paddingRight="15dp"
     android:paddingEnd="15dp"
-    android:weightSum="4">
+    android:weightSum="15">
     <LinearLayout
         android:id="@+id/pip"
         android:layout_width="0dp"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_weight="2"
+        android:layout_weight="7"
         android:weightSum="2">
         <TextView
             android:id="@+id/day_name_weekly_forecast"
@@ -28,35 +28,39 @@
             android:id="@+id/weather_name_weekly_forecast"
             android:layout_height="0dp"
             android:textSize="12sp"
+            android:textColor="#ffffff"
+            android:fontFamily="sans-serif-condensed"
             android:gravity="start|top"
             android:layout_width="wrap_content"
             android:layout_weight="1"
             android:text="weather name"/>
     </LinearLayout>
 
-    <LinearLayout
+    <ImageView
+        android:id="@+id/weatherIconBox"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_weight="1"/>
+        android:layout_weight="4"/>
     <LinearLayout
         android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
+        android:layout_height="wrap_content"
+        android:layout_weight="4"
         android:weightSum="2">
         <TextView
             android:id="@+id/max_temp_weekly_forecast"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
             android:text="0"
             android:layout_weight="1"
+            android:textColor="#ffffff"
             android:gravity="center_vertical|end"
             android:textSize="20sp" />
         <TextView
             android:id="@+id/min_temp_weekly_forecast"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
             android:text="0"
-            android:textColor="#8c8c8c"
+            android:textColor="#b7b7b7"
             android:layout_weight="1"
             android:gravity="center_vertical|end"
             android:textSize="18sp"/>
