--- a/WeatherAppTest3/app/src/main/res/layout/fragment_weekly_forecast.xml
+++ b/WeatherAppTest3/app/src/main/res/layout/fragment_weekly_forecast.xml
@@ -7,7 +7,7 @@
         android:id="@+id/weekly_forecast"
         android:layout_width="match_parent"
         android:dividerHeight="1dp"
-        android:divider="#f0f0f0"
+        android:divider="#b7b7b7"
         android:layout_height="match_parent"
         android:clipToPadding="false"
         android:scrollbarStyle="outsideInset"
