--- a/WeatherAppTest3/app/src/main/res/layout/fragment_day_forcast.xml
+++ b/WeatherAppTest3/app/src/main/res/layout/fragment_day_forcast.xml
@@ -13,7 +13,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="30dp"
-        android:weightSum="4"
+        android:weightSum="5"
         android:orientation="horizontal">
         <ImageView
             android:id="@+id/humidityBoxIcon"
@@ -39,11 +39,17 @@
             android:layout_height="match_parent"
             android:src="@drawable/wind_speed"
             android:layout_weight="1"/>
+        <ImageView
+            android:id="@+id/kIndexBoxIcon"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:src="@drawable/humidity_new"
+            android:layout_weight="1"/>
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:weightSum="4"
+        android:weightSum="5"
         android:orientation="horizontal"
         android:layout_marginBottom="10dp"
         android:layout_marginTop="5dp">
@@ -76,6 +82,15 @@
             android:gravity="center"/>
         <TextView
             android:id="@+id/pishBox"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:textColor="#ffffff"
+            android:layout_height="match_parent"
+            android:textSize="20sp"
+            android:fontFamily="sans-serif-medium"
+            android:gravity="center"/>
+        <TextView
+            android:id="@+id/kIndexBox"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:textColor="#ffffff"
