--- a/WeatherAppTest3/app/src/main/res/layout/fragment_day_forcast.xml
+++ b/WeatherAppTest3/app/src/main/res/layout/fragment_day_forcast.xml
@@ -3,103 +3,97 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="50dp">
-    <ImageView
-        android:id="@+id/weatherIconBox"
-        android:layout_margin="20dp"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:src = "@drawable/ic_clear_sky"
-        android:layout_gravity="center"/>
-    <LinearLayout
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:weightSum="5"
-        android:orientation="horizontal">
-        <ImageView
-            android:id="@+id/humidityBoxIcon"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:src="@drawable/humidity_new"
-            android:layout_weight="1"/>
-        <ImageView
-            android:id="@+id/windSpeedBoxIcon"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:src="@drawable/wind_speed"
-            android:layout_weight="1"/>
-        <ImageView
-            android:id="@+id/pressureBoxIcon"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:src="@drawable/pressure_icon2"
-            android:layout_weight="1"/>
-        <ImageView
-            android:id="@+id/windDirectionBoxIcon"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:src="@drawable/wind_speed"
-            android:layout_weight="1"/>
-        <ImageView
-            android:id="@+id/kIndexBoxIcon"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:src="@drawable/humidity_new"
-            android:layout_weight="1"/>
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:weightSum="5"
-        android:orientation="horizontal"
-        android:layout_marginBottom="10dp"
-        android:layout_marginTop="5dp">
-        <TextView
-            android:id="@+id/humidityBox"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:textColor="#ffffff"
-            android:fontFamily="sans-serif-medium"
-            android:textSize="20sp"
-            android:layout_height="match_parent" />
-        <TextView
-            android:id="@+id/windSpeedBox"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:textColor="#ffffff"
-            android:textSize="20sp"
-            android:fontFamily="sans-serif-medium"
-            android:layout_height="match_parent" />
-        <TextView
-            android:id="@+id/pressureBox"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:textColor="#ffffff"
-            android:layout_height="match_parent"
-            android:textSize="20sp"
-            android:fontFamily="sans-serif-medium"
-            android:gravity="center"/>
-        <TextView
-            android:id="@+id/pishBox"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:textColor="#ffffff"
-            android:layout_height="match_parent"
-            android:textSize="20sp"
-            android:fontFamily="sans-serif-medium"
-            android:gravity="center"/>
-        <TextView
-            android:id="@+id/kIndexBox"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:textColor="#ffffff"
-            android:layout_height="match_parent"
-            android:textSize="20sp"
-            android:fontFamily="sans-serif-medium"
-            android:gravity="center"/>
-    </LinearLayout>
+        android:layout_height="180dp"
+        android:weightSum="4"
+        android:orientation="horizontal" >
 
+        <LinearLayout
+            android:layout_height="match_parent"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:weightSum="4">
+            <ImageView
+                android:id="@+id/humidityBoxIcon"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:src="@drawable/humidity_new"
+                android:layout_weight="1"/>
+            <TextView
+                android:id="@+id/humidityBox"
+                android:layout_height="0dp"
+                android:layout_width="match_parent"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:textColor="#ffffff"
+                android:fontFamily="sans-serif-medium"
+                android:textSize="20sp"/>
+
+            <ImageView
+                android:id="@+id/windSpeedBoxIcon"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:src="@drawable/wind_speed"
+                android:layout_weight="1" />
+
+            <TextView
+                android:id="@+id/windSpeedBox"
+                android:layout_height="0dp"
+                android:layout_width="match_parent"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:textColor="#ffffff"
+                android:textSize="20sp"
+                android:fontFamily="sans-serif-medium"/>
+        </LinearLayout>
+        <ImageView
+            android:id="@+id/weatherIconBox"
+            android:layout_width="0dp"
+            android:layout_height="130dp"
+            android:scaleType="centerInside"
+            android:layout_weight="2"
+            android:src = "@drawable/ic_clear_sky"
+            android:layout_gravity="center"/>
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:layout_weight="1"
+            android:weightSum="4">
+            <ImageView
+                android:id="@+id/pressureBoxIcon"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:src="@drawable/pressure_icon2"/>
+            <TextView
+                android:id="@+id/pressureBox"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:textColor="#ffffff"
+                android:textSize="20sp"
+                android:fontFamily="sans-serif-medium"
+                android:gravity="center"/>
+            <ImageView
+                android:id="@+id/kIndexBoxIcon"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:src="@drawable/humidity_new"
+                android:layout_weight="1"/>
+            <TextView
+                android:id="@+id/kIndexBox"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:textColor="#ffffff"
+                android:textSize="20sp"
+                android:fontFamily="sans-serif-medium"
+                android:gravity="center"/>
+        </LinearLayout>
+    </LinearLayout>
     <FrameLayout
         android:layout_width="wrap_content"
         android:layout_height="250dp"
