--- a/WeatherAppTest3/app/src/main/res/layout/fragment_extreme_weather.xml
+++ b/WeatherAppTest3/app/src/main/res/layout/fragment_extreme_weather.xml
@@ -3,34 +3,96 @@
     android:layout_height="wrap_content"
     android:weightSum="4"
     android:orientation="horizontal" >
+
     <LinearLayout
         android:layout_height="match_parent"
         android:layout_width="match_parent"
         android:layout_weight="1"
         android:orientation="vertical"
-        android:weightSum="2">
+        android:weightSum="4">
+        <ImageView
+            android:id="@+id/humidityBoxIcon"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:src="@drawable/humidity_new"
+            android:layout_weight="1"/>
+        <TextView
+            android:id="@+id/humidityBox"
+            android:layout_height="0dp"
+            android:layout_width="match_parent"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:textColor="#ffffff"
+            android:fontFamily="sans-serif-medium"
+            android:textSize="20sp"/>
 
+        <ImageView
+            android:id="@+id/windSpeedBoxIcon"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:src="@drawable/wind_speed"
+            android:layout_weight="1"/>
 
-
+        <TextView
+            android:id="@+id/windSpeedBox"
+            android:layout_height="0dp"
+            android:layout_width="match_parent"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:textColor="#ffffff"
+            android:textSize="20sp"
+            android:fontFamily="sans-serif-medium"/>
     </LinearLayout>
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:
+        android:orientation="vertical"
         android:layout_weight="2"
         android:weightSum="2">
-
+        <ImageView
+            android:id="@+id/weatherIconBox"
+            android:layout_margin="20dp"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:src = "@drawable/ic_clear_sky"
+            android:layout_gravity="center"/>
     </LinearLayout>
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="1">
+        android:orientation="vertical"
+        android:layout_weight="1"
+        android:weightSum="4">
+        <ImageView
+            android:id="@+id/pressureBoxIcon"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:src="@drawable/pressure_icon2"/>
 
+        <TextView
+            android:id="@+id/pressureBox"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:textColor="#ffffff"
+            android:textSize="20sp"
+            android:fontFamily="sans-serif-medium"
+            android:gravity="center"/>
+        <ImageView
+            android:id="@+id/kIndexBoxIcon"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:src="@drawable/humidity_new"
+            android:layout_weight="1"/>
+        <TextView
+            android:id="@+id/kIndexBox"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:textColor="#ffffff"
+            android:textSize="20sp"
+            android:fontFamily="sans-serif-medium"
+            android:gravity="center"/>
     </LinearLayout>
-
-
-
-
 </LinearLayout>
