--- a/WeatherAppTest3/app/src/main/res/layout/item_weekly_forecast.xml
+++ b/WeatherAppTest3/app/src/main/res/layout/item_weekly_forecast.xml
@@ -3,66 +3,69 @@
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="5dp"
-    android:paddingStart="15dp"
-    android:paddingLeft="15dp"
-    android:paddingRight="15dp"
-    android:paddingEnd="15dp"
-    android:weightSum="15">
+    android:paddingTop="8dp"
+    android:paddingLeft="10dp"
+    android:paddingRight="10dp"
+    android:paddingBottom="16dp"
+    android:weightSum="9">
     <LinearLayout
-        android:id="@+id/pip"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_weight="7"
+        android:layout_weight="5"
         android:weightSum="2">
         <TextView
             android:id="@+id/day_name_weekly_forecast"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
-            android:textSize="18sp"
+            android:textSize="@dimen/text_large"
+            android:textColor="@color/colorPrimaryDark"
             android:gravity="start|bottom"
-            android:layout_weight="1"
-            android:text="day"/>
+            android:layout_weight="1"/>
         <TextView
             android:id="@+id/weather_name_weekly_forecast"
             android:layout_height="0dp"
-            android:textSize="12sp"
-            android:textColor="#ffffff"
+            android:textSize="@dimen/text_xsmall"
+            android:textColor="@color/colorPrimary"
             android:fontFamily="sans-serif-condensed"
             android:gravity="start|top"
             android:layout_width="wrap_content"
-            android:layout_weight="1"
-            android:text="weather name"/>
+            android:layout_weight="1"/>
     </LinearLayout>
-
-    <ImageView
-        android:id="@+id/weatherIconBox"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="4"/>
     <LinearLayout
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="4"
+        android:layout_height="match_parent"
+        android:layout_weight="2"
+        android:gravity="center">
+        <ImageView
+            android:id="@+id/weatherIconBox"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:layout_weight="2"/>
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="2"
+        android:orientation="horizontal"
         android:weightSum="2">
         <TextView
             android:id="@+id/max_temp_weekly_forecast"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:text="0"
             android:layout_weight="1"
-            android:textColor="#ffffff"
+            android:textColor="@color/colorPrimary"
             android:gravity="center_vertical|end"
-            android:textSize="20sp" />
+            android:textSize="@dimen/text_xlarge"/>
         <TextView
             android:id="@+id/min_temp_weekly_forecast"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:text="0"
-            android:textColor="#b7b7b7"
+            android:textColor="@color/colorPrimaryDark"
             android:layout_weight="1"
             android:gravity="center_vertical|end"
-            android:textSize="18sp"/>
+            android:textSize="@dimen/text_large"/>
     </LinearLayout>
 </LinearLayout>
