--- a/WeatherAppTest3/app/src/main/res/layout/item_gps.xml
+++ b/WeatherAppTest3/app/src/main/res/layout/item_gps.xml
@@ -7,11 +7,12 @@
     android:elevation="5dp"
     android:background="@drawable/shape_rounded_active"
     style="@style/CustomTextView">
+
     <include layout="@layout/city"/>
     <Button
-        android:id="@+id/deleteButton"
+        android:id="@+id/findLocationButton"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_gravity="center_vertical"
-        android:background="@android:drawable/ic_input_delete"/>
+        android:background="@android:drawable/ic_menu_mylocation"/>
 </LinearLayout>
