--- a/WeatherAppTest3/app/src/main/res/menu/menu_main_window.xml
+++ b/WeatherAppTest3/app/src/main/res/menu/menu_main_window.xml
@@ -8,7 +8,6 @@
             android:id="@+id/refresh"
             android:title="Refresh"
             android:icon="@android:drawable/ic_menu_rotate"
-            app:showAsAction="ifRoom"
-            />
+            app:showAsAction="ifRoom"/>
     </group>
 </menu>
