--- a/WeatherAppTest3/app/src/main/res/values/colors.xml
+++ b/WeatherAppTest3/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#ffffff</color>
+    <color name="colorPrimaryDark">#c7c7c7</color>
+    <color name="colorAccent">#2fa1d5</color>
+    <color name="colorBlack">#2a2f37</color>
 </resources>
